# rchess

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: perfts.rs
examples/terminal-game/: Cargo.toml
examples/terminal-game/src/: game_controller.rs  input_getter.rs  main.rs
src/: build.rs  chess_game.rs  chessboard.rs  lib.rs  zobrist.rs
src/chessboard/: builder.rs  castling_rights.rs  chessboard.rs  mod.rs  tables.rs  zobrist.rs
src/chessboard/movegen/: generator.rs  mod.rs  movegen.rs  movelist.rs  tests.rs
src/defs/: bitboard.rs  color.rs  direction.rs  file.rs  magic.rs  mod.rs  piece.rs  rank.rs  square.rs
src/mask_gen/: mod.rs  sliders.rs
src/movegen/: generator.rs  movegen.rs  movelist.rs  tests.rs
src/table_gen/: general.rs  leapers.rs  mod.rs  sliders.rs  zobrist.rs
tests/: game.rs  hashes.rs  perft.rs  positions.rs
