[package]
name = "rchess"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Chess Library Written In Rust"
repository = "https://github.com/Shadowcat650/rchess"
documentation = "https://docs.rs/rchess/2.0.0/rchess/"
readme = "README.md"
keywords = ["chess", "board", "chessboard"]
categories = ["data-structures"]
build = "src/build.rs"

[features]
default = []
magic-table = []

[[bench]]
name = "perfts"
harness = false

[profile.dev.build-override]
opt-level = 3

[profile.test.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.test]
opt-level = 3

[build-dependencies]
lazy_static = "1.5.0"
fastrand = "2.3.0"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
thiserror = "2.0.9"
