[package]
name = "rchess"
version = "2.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Chess Library Written In Rust"
repository = "https://github.com/Shadowcat650/rchess"
documentation = "https://docs.rs/rchess/2.2.1/rchess/"
readme = "README.md"
keywords = ["chess", "board", "chessboard", "chessgame", "move-generation"]
categories = ["games"]
build = "src/build.rs"

[features]
default = []
magic-table = []
serde = ["dep:serde"]

[[bench]]
name = "perfts"
harness = false

[profile.dev.build-override]
opt-level = 3

[profile.test.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.test]
opt-level = 3

[build-dependencies]
fastrand = "2.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
thiserror = "2.0.11"
